gitops/tanzu/application-platform/profiles/additional/view/api-portal-ingress.yml
#@ load("@ytt:data", "data")
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: api-portal
  namespace: api-portal
spec:
  routes:
  - services:
    - name: api-portal-server
      port: 8080
  virtualhost:
    fqdn: #@ "api-portal.{}".format(data.values.tap.domains.main)
    tls:
      secretName: #@ "{}/{}".format(data.values.tap.ingress.contour_tls_namespace,data.values.tap.ingress.contour_tls_secret)
